// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AddLinkDialog > should add a "learn more" link if an url is provided 1`] = `
"<!-- eslint-disable vue/no-v-model-argument max-len-->
<!-- eslint-disable vue/no-v-model-argument -->
<transition-stub name=\\"cdx-dialog-fade\\" appear=\\"true\\" persisted=\\"false\\" css=\\"true\\">
  <div class=\\"cdx-dialog-backdrop\\">
    <div tabindex=\\"0\\"></div>
    <div class=\\"cdx-dialog cdx-dialog--horizontal-actions cdx-dialog--has-custom-header cdx-dialog--has-custom-footer ext-growthExperiments-OnboardingDialog ext-growthExperiments-AddLinkDialog\\" role=\\"dialog\\" aria-label=\\"Introduction\\">
      <header class=\\"cdx-dialog__header\\">
        <div class=\\"ext-growthExperiments-OnboardingDialog__header\\">
          <div class=\\"ext-growthExperiments-OnboardingDialog__header__top\\">
            <h4 class=\\"ext-growthExperiments-OnboardingDialog__header__top__title\\">growthexperiments-structuredtask-onboarding-dialog-title:[]</h4><button class=\\"cdx-button cdx-button--action-default cdx-button--weight-quiet cdx-button--size-medium ext-growthExperiments-OnboardingDialog__header__top__button\\">growthexperiments-structuredtask-onboarding-dialog-label-skip-all:[]</button>
          </div><!-- eslint-disable max-len -->
          <div class=\\"ext-growthExperiments-OnboardingStepper ext-growthExperiments-OnboardingDialog__header__stepper\\"><span class=\\"ext-growthExperiments-OnboardingStepper__label\\">growthexperiments-structuredtask-onboarding-dialog-progress:[1,3]</span>
            <div class=\\"ext-growthExperiments-OnboardingStepper__dots\\">
              <div class=\\"ext-growthExperiments-OnboardingStepper__dots__dot ext-growthExperiments-OnboardingStepper__dots__dot--active\\"></div>
              <div class=\\"ext-growthExperiments-OnboardingStepper__dots__dot ext-growthExperiments-OnboardingStepper__dots__dot--active\\"></div>
              <div class=\\"ext-growthExperiments-OnboardingStepper__dots__dot\\"></div>
            </div>
          </div><!-- eslint-enable max-len -->
        </div>
      </header>
      <div class=\\"cdx-dialog-focus-trap\\" tabindex=\\"-1\\"></div>
      <div class=\\"cdx-dialog__body\\">
        <div>
          <div class=\\"ext-growthExperiments-MultiPane\\">
            <transition-stub appear=\\"false\\" persisted=\\"false\\" css=\\"true\\">
              <div>
                <div role=\\"img\\" aria-label=\\"growthexperiments-addlink-onboarding-content-about-image-alt-text:[]\\" class=\\"ext-growthExperiments-AddLinkDialog__image ext-growthExperiments-AddLinkDialog__image--2\\"></div>
                <h5 class=\\"ext-growthExperiments-AddLinkDialog__title\\">growthexperiments-addlink-onboarding-content-about-suggested-links-title:[]</h5>
                <div class=\\"ext-growthExperiments-AddLinkDialog__text\\">
                  <p>growthexperiments-addlink-onboarding-content-about-suggested-links-body:[Alice]</p><a class=\\"ext-growthExperiments-AddLinkDialog__text__link\\" href=\\"https://www.wikipedia.org/\\" target=\\"_blank\\">growthexperiments-addlink-onboarding-content-about-suggested-links-body-learn-more-link-text:[]</a>
                </div>
              </div>
            </transition-stub>
          </div>
        </div>
      </div>
      <footer class=\\"cdx-dialog__footer\\">
        <div class=\\"ext-growthExperiments-OnboardingDialog__footer\\"><span class=\\"cdx-checkbox ext-growthExperiments-OnboardingDialog__footer__permanent-action\\"><input id=\\"cdx-checkbox-7\\" class=\\"cdx-checkbox__input\\" type=\\"checkbox\\" value=\\"false\\"><span class=\\"cdx-checkbox__icon\\"></span><label class=\\"cdx-checkbox__label\\" for=\\"cdx-checkbox-7\\">growthexperiments-structuredtask-onboarding-dialog-dismiss-checkbox:[]</label></span>
          <div class=\\"ext-growthExperiments-OnboardingDialog__footer__navigation\\">
            <div class=\\"ext-growthExperiments-OnboardingDialog__footer__navigation-prev\\"><button class=\\"cdx-button cdx-button--action-default cdx-button--weight-normal cdx-button--size-medium cdx-button--framed cdx-button--icon-only\\" aria-label=\\"previous\\"><span class=\\"cdx-icon cdx-icon--medium\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"20\\" height=\\"20\\" viewBox=\\"0 0 20 20\\"><title>previous</title><g><path d=\\"m4 10 9 9 1.4-1.5L7 10l7.4-7.5L13 1z\\"></path></g></svg></span></button></div>
            <div class=\\"ext-growthExperiments-OnboardingDialog__footer__navigation--next\\"><button class=\\"cdx-button cdx-button--action-progressive cdx-button--weight-primary cdx-button--size-medium cdx-button--framed cdx-button--icon-only cdx-button--icon-only\\" aria-label=\\"next\\"><span class=\\"cdx-icon cdx-icon--medium\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"20\\" height=\\"20\\" viewBox=\\"0 0 20 20\\"><title>next</title><g><path d=\\"M7 1 5.6 2.5 13 10l-7.4 7.5L7 19l9-9z\\"></path></g></svg></span></button></div>
          </div>
        </div>
      </footer>
    </div>
    <div tabindex=\\"0\\"></div>
  </div>
</transition-stub>"
`;

exports[`AddLinkDialog > should render 3 step with Add a link on-boarding content 1`] = `
"<!-- eslint-disable vue/no-v-model-argument max-len-->
<!-- eslint-disable vue/no-v-model-argument -->
<transition-stub name=\\"cdx-dialog-fade\\" appear=\\"true\\" persisted=\\"false\\" css=\\"true\\">
  <div class=\\"cdx-dialog-backdrop\\">
    <div tabindex=\\"0\\"></div>
    <div class=\\"cdx-dialog cdx-dialog--horizontal-actions cdx-dialog--has-custom-header cdx-dialog--has-custom-footer ext-growthExperiments-OnboardingDialog ext-growthExperiments-AddLinkDialog\\" role=\\"dialog\\" aria-label=\\"Introduction\\">
      <header class=\\"cdx-dialog__header\\">
        <div class=\\"ext-growthExperiments-OnboardingDialog__header\\">
          <div class=\\"ext-growthExperiments-OnboardingDialog__header__top\\">
            <h4 class=\\"ext-growthExperiments-OnboardingDialog__header__top__title\\">growthexperiments-structuredtask-onboarding-dialog-title:[]</h4><button class=\\"cdx-button cdx-button--action-default cdx-button--weight-quiet cdx-button--size-medium ext-growthExperiments-OnboardingDialog__header__top__button\\">growthexperiments-structuredtask-onboarding-dialog-label-skip-all:[]</button>
          </div><!-- eslint-disable max-len -->
          <div class=\\"ext-growthExperiments-OnboardingStepper ext-growthExperiments-OnboardingDialog__header__stepper\\"><span class=\\"ext-growthExperiments-OnboardingStepper__label\\">growthexperiments-structuredtask-onboarding-dialog-progress:[1,3]</span>
            <div class=\\"ext-growthExperiments-OnboardingStepper__dots\\">
              <div class=\\"ext-growthExperiments-OnboardingStepper__dots__dot ext-growthExperiments-OnboardingStepper__dots__dot--active\\"></div>
              <div class=\\"ext-growthExperiments-OnboardingStepper__dots__dot\\"></div>
              <div class=\\"ext-growthExperiments-OnboardingStepper__dots__dot\\"></div>
            </div>
          </div><!-- eslint-enable max-len -->
        </div>
      </header>
      <div class=\\"cdx-dialog-focus-trap\\" tabindex=\\"-1\\"></div>
      <div class=\\"cdx-dialog__body\\">
        <div>
          <div class=\\"ext-growthExperiments-MultiPane\\">
            <transition-stub appear=\\"false\\" persisted=\\"false\\" css=\\"true\\">
              <div>
                <div role=\\"img\\" aria-label=\\"growthexperiments-addlink-onboarding-content-intro-image-alt-text:[]\\" class=\\"ext-growthExperiments-AddLinkDialog__image ext-growthExperiments-AddLinkDialog__image--1\\"></div>
                <h5 class=\\"ext-growthExperiments-AddLinkDialog__title\\">growthexperiments-addlink-onboarding-content-intro-title:[]</h5>
                <div class=\\"ext-growthExperiments-AddLinkDialog__text\\">
                  <p>growthexperiments-addlink-onboarding-content-intro-body-paragraph1:[Alice]</p>
                  <div class=\\"ext-growthExperiments-AddLinkDialog__text__label\\">growthexperiments-addlink-onboarding-content-intro-body-example-label:[]</div><!-- eslint-disable-next-line max-len, vue/first-attribute-linebreak -->
                  <div class=\\"ext-growthExperiments-AddLinkDialog__text__example\\">growthexperiments-addlink-onboarding-content-intro-body-example-text</div>
                  <p>growthexperiments-addlink-onboarding-content-intro-body-paragraph2:[]</p>
                </div>
              </div>
            </transition-stub>
          </div>
        </div>
      </div>
      <footer class=\\"cdx-dialog__footer\\">
        <div class=\\"ext-growthExperiments-OnboardingDialog__footer\\"><span class=\\"cdx-checkbox ext-growthExperiments-OnboardingDialog__footer__permanent-action\\"><input id=\\"cdx-checkbox-1\\" class=\\"cdx-checkbox__input\\" type=\\"checkbox\\" value=\\"false\\"><span class=\\"cdx-checkbox__icon\\"></span><label class=\\"cdx-checkbox__label\\" for=\\"cdx-checkbox-1\\">growthexperiments-structuredtask-onboarding-dialog-dismiss-checkbox:[]</label></span>
          <div class=\\"ext-growthExperiments-OnboardingDialog__footer__navigation\\">
            <!--v-if-->
            <div class=\\"ext-growthExperiments-OnboardingDialog__footer__navigation--next\\"><button class=\\"cdx-button cdx-button--action-progressive cdx-button--weight-primary cdx-button--size-medium cdx-button--framed cdx-button--icon-only cdx-button--icon-only\\" aria-label=\\"next\\"><span class=\\"cdx-icon cdx-icon--medium\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"20\\" height=\\"20\\" viewBox=\\"0 0 20 20\\"><title>next</title><g><path d=\\"M7 1 5.6 2.5 13 10l-7.4 7.5L7 19l9-9z\\"></path></g></svg></span></button></div>
          </div>
        </div>
      </footer>
    </div>
    <div tabindex=\\"0\\"></div>
  </div>
</transition-stub>"
`;

exports[`AddLinkDialog > should render second step with Add a link on-boarding content 1`] = `
"<!-- eslint-disable vue/no-v-model-argument max-len-->
<!-- eslint-disable vue/no-v-model-argument -->
<transition-stub name=\\"cdx-dialog-fade\\" appear=\\"true\\" persisted=\\"false\\" css=\\"true\\">
  <div class=\\"cdx-dialog-backdrop\\">
    <div tabindex=\\"0\\"></div>
    <div class=\\"cdx-dialog cdx-dialog--horizontal-actions cdx-dialog--has-custom-header cdx-dialog--has-custom-footer ext-growthExperiments-OnboardingDialog ext-growthExperiments-AddLinkDialog\\" role=\\"dialog\\" aria-label=\\"Introduction\\">
      <header class=\\"cdx-dialog__header\\">
        <div class=\\"ext-growthExperiments-OnboardingDialog__header\\">
          <div class=\\"ext-growthExperiments-OnboardingDialog__header__top\\">
            <h4 class=\\"ext-growthExperiments-OnboardingDialog__header__top__title\\">growthexperiments-structuredtask-onboarding-dialog-title:[]</h4><button class=\\"cdx-button cdx-button--action-default cdx-button--weight-quiet cdx-button--size-medium ext-growthExperiments-OnboardingDialog__header__top__button\\">growthexperiments-structuredtask-onboarding-dialog-label-skip-all:[]</button>
          </div><!-- eslint-disable max-len -->
          <div class=\\"ext-growthExperiments-OnboardingStepper ext-growthExperiments-OnboardingDialog__header__stepper\\"><span class=\\"ext-growthExperiments-OnboardingStepper__label\\">growthexperiments-structuredtask-onboarding-dialog-progress:[1,3]</span>
            <div class=\\"ext-growthExperiments-OnboardingStepper__dots\\">
              <div class=\\"ext-growthExperiments-OnboardingStepper__dots__dot ext-growthExperiments-OnboardingStepper__dots__dot--active\\"></div>
              <div class=\\"ext-growthExperiments-OnboardingStepper__dots__dot ext-growthExperiments-OnboardingStepper__dots__dot--active\\"></div>
              <div class=\\"ext-growthExperiments-OnboardingStepper__dots__dot\\"></div>
            </div>
          </div><!-- eslint-enable max-len -->
        </div>
      </header>
      <div class=\\"cdx-dialog-focus-trap\\" tabindex=\\"-1\\"></div>
      <div class=\\"cdx-dialog__body\\">
        <div>
          <div class=\\"ext-growthExperiments-MultiPane\\">
            <transition-stub appear=\\"false\\" persisted=\\"false\\" css=\\"true\\">
              <div>
                <div role=\\"img\\" aria-label=\\"growthexperiments-addlink-onboarding-content-about-image-alt-text:[]\\" class=\\"ext-growthExperiments-AddLinkDialog__image ext-growthExperiments-AddLinkDialog__image--2\\"></div>
                <h5 class=\\"ext-growthExperiments-AddLinkDialog__title\\">growthexperiments-addlink-onboarding-content-about-suggested-links-title:[]</h5>
                <div class=\\"ext-growthExperiments-AddLinkDialog__text\\">
                  <p>growthexperiments-addlink-onboarding-content-about-suggested-links-body:[Alice]</p>
                  <!--v-if-->
                </div>
              </div>
            </transition-stub>
          </div>
        </div>
      </div>
      <footer class=\\"cdx-dialog__footer\\">
        <div class=\\"ext-growthExperiments-OnboardingDialog__footer\\"><span class=\\"cdx-checkbox ext-growthExperiments-OnboardingDialog__footer__permanent-action\\"><input id=\\"cdx-checkbox-3\\" class=\\"cdx-checkbox__input\\" type=\\"checkbox\\" value=\\"false\\"><span class=\\"cdx-checkbox__icon\\"></span><label class=\\"cdx-checkbox__label\\" for=\\"cdx-checkbox-3\\">growthexperiments-structuredtask-onboarding-dialog-dismiss-checkbox:[]</label></span>
          <div class=\\"ext-growthExperiments-OnboardingDialog__footer__navigation\\">
            <div class=\\"ext-growthExperiments-OnboardingDialog__footer__navigation-prev\\"><button class=\\"cdx-button cdx-button--action-default cdx-button--weight-normal cdx-button--size-medium cdx-button--framed cdx-button--icon-only\\" aria-label=\\"previous\\"><span class=\\"cdx-icon cdx-icon--medium\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"20\\" height=\\"20\\" viewBox=\\"0 0 20 20\\"><title>previous</title><g><path d=\\"m4 10 9 9 1.4-1.5L7 10l7.4-7.5L13 1z\\"></path></g></svg></span></button></div>
            <div class=\\"ext-growthExperiments-OnboardingDialog__footer__navigation--next\\"><button class=\\"cdx-button cdx-button--action-progressive cdx-button--weight-primary cdx-button--size-medium cdx-button--framed cdx-button--icon-only cdx-button--icon-only\\" aria-label=\\"next\\"><span class=\\"cdx-icon cdx-icon--medium\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"20\\" height=\\"20\\" viewBox=\\"0 0 20 20\\"><title>next</title><g><path d=\\"M7 1 5.6 2.5 13 10l-7.4 7.5L7 19l9-9z\\"></path></g></svg></span></button></div>
          </div>
        </div>
      </footer>
    </div>
    <div tabindex=\\"0\\"></div>
  </div>
</transition-stub>"
`;

exports[`AddLinkDialog > should render third step with Add a link on-boarding content 1`] = `
"<!-- eslint-disable vue/no-v-model-argument max-len-->
<!-- eslint-disable vue/no-v-model-argument -->
<transition-stub name=\\"cdx-dialog-fade\\" appear=\\"true\\" persisted=\\"false\\" css=\\"true\\">
  <div class=\\"cdx-dialog-backdrop\\">
    <div tabindex=\\"0\\"></div>
    <div class=\\"cdx-dialog cdx-dialog--horizontal-actions cdx-dialog--has-custom-header cdx-dialog--has-custom-footer ext-growthExperiments-OnboardingDialog ext-growthExperiments-AddLinkDialog\\" role=\\"dialog\\" aria-label=\\"Introduction\\">
      <header class=\\"cdx-dialog__header\\">
        <div class=\\"ext-growthExperiments-OnboardingDialog__header\\">
          <div class=\\"ext-growthExperiments-OnboardingDialog__header__top\\">
            <h4 class=\\"ext-growthExperiments-OnboardingDialog__header__top__title\\">growthexperiments-structuredtask-onboarding-dialog-title:[]</h4><button class=\\"cdx-button cdx-button--action-default cdx-button--weight-quiet cdx-button--size-medium ext-growthExperiments-OnboardingDialog__header__top__button\\">growthexperiments-structuredtask-onboarding-dialog-label-skip-all:[]</button>
          </div><!-- eslint-disable max-len -->
          <div class=\\"ext-growthExperiments-OnboardingStepper ext-growthExperiments-OnboardingDialog__header__stepper\\"><span class=\\"ext-growthExperiments-OnboardingStepper__label\\">growthexperiments-structuredtask-onboarding-dialog-progress:[1,3]</span>
            <div class=\\"ext-growthExperiments-OnboardingStepper__dots\\">
              <div class=\\"ext-growthExperiments-OnboardingStepper__dots__dot ext-growthExperiments-OnboardingStepper__dots__dot--active\\"></div>
              <div class=\\"ext-growthExperiments-OnboardingStepper__dots__dot ext-growthExperiments-OnboardingStepper__dots__dot--active\\"></div>
              <div class=\\"ext-growthExperiments-OnboardingStepper__dots__dot ext-growthExperiments-OnboardingStepper__dots__dot--active\\"></div>
            </div>
          </div><!-- eslint-enable max-len -->
        </div>
      </header>
      <div class=\\"cdx-dialog-focus-trap\\" tabindex=\\"-1\\"></div>
      <div class=\\"cdx-dialog__body\\">
        <div>
          <div class=\\"ext-growthExperiments-MultiPane\\">
            <transition-stub appear=\\"false\\" persisted=\\"false\\" css=\\"true\\">
              <div>
                <div role=\\"img\\" aria-label=\\"growthexperiments-addlink-onboarding-content-linking-image-alt-text:[]\\" class=\\"ext-growthExperiments-AddLinkDialog__image ext-growthExperiments-AddLinkDialog__image--3\\"></div>
                <h5 class=\\"ext-growthExperiments-AddLinkDialog__title\\">growthexperiments-addlink-onboarding-content-linking-guidelines-title:[]</h5>
                <div class=\\"ext-growthExperiments-AddLinkDialog__text\\">
                  <div class=\\"ext-growthExperiments-AddLinkDialog__text__list\\">
                    <!-- eslint-disable-next-line max-len -->
                    <ul>growthexperiments-addlink-onboarding-content-linking-guidelines-body</ul>
                  </div>
                </div>
              </div>
            </transition-stub>
          </div>
        </div>
      </div>
      <footer class=\\"cdx-dialog__footer\\">
        <div class=\\"ext-growthExperiments-OnboardingDialog__footer\\"><span class=\\"cdx-checkbox ext-growthExperiments-OnboardingDialog__footer__permanent-action\\"><input id=\\"cdx-checkbox-5\\" class=\\"cdx-checkbox__input\\" type=\\"checkbox\\" value=\\"false\\"><span class=\\"cdx-checkbox__icon\\"></span><label class=\\"cdx-checkbox__label\\" for=\\"cdx-checkbox-5\\">growthexperiments-structuredtask-onboarding-dialog-dismiss-checkbox:[]</label></span>
          <div class=\\"ext-growthExperiments-OnboardingDialog__footer__navigation\\">
            <div class=\\"ext-growthExperiments-OnboardingDialog__footer__navigation-prev\\"><button class=\\"cdx-button cdx-button--action-default cdx-button--weight-normal cdx-button--size-medium cdx-button--framed cdx-button--icon-only\\" aria-label=\\"previous\\"><span class=\\"cdx-icon cdx-icon--medium\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"20\\" height=\\"20\\" viewBox=\\"0 0 20 20\\"><title>previous</title><g><path d=\\"m4 10 9 9 1.4-1.5L7 10l7.4-7.5L13 1z\\"></path></g></svg></span></button></div>
            <div class=\\"ext-growthExperiments-OnboardingDialog__footer__navigation--next\\"><button class=\\"cdx-button cdx-button--action-progressive cdx-button--weight-primary cdx-button--size-medium cdx-button--framed\\">
                <!-- eslint-disable max-len -->growthexperiments-structuredtask-onboarding-dialog-get-started-button:[]
                <!-- eslint-enable max-len -->
              </button></div>
          </div>
        </div>
      </footer>
    </div>
    <div tabindex=\\"0\\"></div>
  </div>
</transition-stub>"
`;
